[package]
name = "leetcode-practice-queue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name="lcpush"
path="src/bin/lcpush.rs"

[[bin]]
name="lcpop"
path="src/bin/lcpop.rs"

[[bin]]
name="lclist"
path="src/bin/lclist.rs"

[[bin]]
name="lcsnooze"
path="src/bin/lcsnooze.rs"

[dependencies]
fs2 = "0.4.3"
wild = "2.1.0"
xdg = "2.4.1"
